Fix image file type loading, and image covering

--- a/EdPlatform.App/wwwroot/css/site.scss
+++ b/EdPlatform.App/wwwroot/css/site.scss
@@ -127,19 +127,24 @@ header nav {
 
             .course-plate {
                 padding: 10px;
-                width: 20%;
                 background: #415262;
                 border-radius: 4px;
                 flex-grow: 0;
-                flex-shrink: 0;
-                flex-basis: 20%;
 
                 h2 {
                     font-size: 20px;
                 }
 
-                img {
-                    width: 100%;
+                .image-cover {
+                    width: 274px;
+                    height: 166px;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
             }
 
